# pixelpets

./: .gitignore  CMakeLists.txt  README.md  build.sh  copy_assets.sh
cmake/: FindSDL2_image.cmake
include/: game.h  render.h
src/: main.cpp  render.cpp
